# smm-generator

./: .gitignore  README.md  requirements.txt
smm-generator/cli/: .env.example  requirements.txt
smm-generator/cli/src/generators/: image_gen.py  text_gen.py
smm-generator/cli/src/smm_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
smm-generator/cli/src/social_publishers/: vk_publisher.py
smm-generator/cli/src/social_stats/: vk_stats.py
smm-generator/web/: DEPLOY_PYTHONANYWHERE.md  ENV_SETUP.md  requirements.txt
smm-generator/web/app/: __init__.py  models.py
smm-generator/web/app/content/: routes.py
smm-generator/web/app/settings/: __init__.py  forms.py  routes.py
smm-generator/web/app/stats/: __init__.py
smm-generator/web/templates/: base.html
smm-generator/web/templates/auth/: dashboard.html  login.html
smm-generator/web/templates/content/: create_post.html
smm-generator/web/templates/settings/: index.html
smm-generator/web/templates/stats/: index.html
smm_app/: .gitignore  pyproject.toml
smm_app/src/: config.py  main.py
smm_app/src/smm_app.egg-info/: top_level.txt
smm_app/src/utils/: logging.py
src_web/: FILES_TO_UPLOAD.md  wsgi.py
src_web/app/auth/: __init__.py  forms.py  routes.py
src_web/app/content/: __init__.py  forms.py
src_web/app/settings/: __init__.py  forms.py  routes.py
src_web/app/stats/: __init__.py  routes.py
src_web/instance/: site.db
src_web/templates/auth/: register.html
src_web/templates/settings/: index.html
src_web/templates/stats/: index.html
